--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "ag-grid-angular": "^30.2.0",
+    "ag-grid-community": "^30.2.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "dayjs": "^1.11.10",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
