--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@stomp/ng2-stompjs": "^8.0.0",
     "ag-grid-angular": "^30.2.0",
     "ag-grid-community": "^30.2.0",
     "bootstrap": "^5.3.2",
@@ -28,9 +29,12 @@
     "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "net": "^1.0.2",
     "primeicons": "^6.0.1",
     "primeng": "^16.4.1",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
