--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "ag-grid-angular": "^30.2.0",
     "ag-grid-community": "^30.2.0",
     "bootstrap": "^5.3.2",
