--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ag-grid-community": "^30.2.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "chart.js": "^4.4.0",
     "dayjs": "^1.11.10",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
@@ -32,7 +33,7 @@
     "net": "^1.0.2",
     "ngx-pagination": "^6.0.3",
     "primeicons": "^6.0.1",
-    "primeng": "^16.4.1",
+    "primeng": "^16.9.0",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
