--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,8 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
+        "proxyConfig": "src/proxy.conf.json",
+
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
@@ -37,6 +39,7 @@
             ],
             "scripts": []
           },
+
           "configurations": {
             "production": {
               "budgets": [
