--- a/package.json
+++ b/package.json
@@ -26,12 +26,19 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.8",
     "@stomp/ng2-stompjs": "^8.0.0",
+    "@taiga-ui/cdk": "^3.57.0",
+    "@taiga-ui/core": "^3.57.0",
+    "@taiga-ui/icons": "^3.57.0",
+    "@taiga-ui/kit": "^3.57.0",
+    "@taiga-ui/styles": "^3.57.0",
+    "@tinkoff/ng-dompurify": "3.0.0",
     "ag-grid-angular": "^30.2.0",
     "ag-grid-community": "^30.2.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "chart.js": "^4.4.0",
     "dayjs": "^1.11.10",
+    "dompurify": "2.2.9",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
@@ -50,6 +57,7 @@
     "@angular-devkit/build-angular": "^16.2.3",
     "@angular/cli": "~16.2.3",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/dompurify": "2.2.3",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
