--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.8",
     "@stomp/ng2-stompjs": "^8.0.0",
+    "@taiga-ui/addon-charts": "^3.57.0",
+    "@taiga-ui/addon-commerce": "^3.57.0",
     "@taiga-ui/cdk": "^3.57.0",
     "@taiga-ui/core": "^3.57.0",
     "@taiga-ui/icons": "^3.57.0",
